# unictl

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPRECATION.md  MIGRATION.md  README.md  package.json
.github/workflows/: release-rehearsal.yml  smoke.yml
.mise/: qa-lib.ts
.mise/task-scripts/: check-error-registry.ps1  check-meta-guids.ps1  check.ps1  release-dry-run.ps1  release.ps1  unictl.ps1
.mise/tasks/qa/: _default.ts  ceiling.ts  crash.ts  cycle.ts  sigint.ts
docs/archive/: README.md
docs/archive/0.1-era/: implementation-backlog.md  standalone-0.1-spec.md
docs/standalone/: README.md  ROADMAP.md  WORKFLOWS.md  agent-discovery.md  consumer-guide.md  development-setup.md  embedded-plan.md  error-reference.md  extraction-map.md  implementation-backlog.md  implementation-plan.md  release-process.md  security-model.md  standalone-0.1-spec.md  test-runner.md  v0.7-plan.md
docs/standalone/v0.7-adr/: A1-heartbeat-abi.md  A2-implementation-notes.md  A3-implementation-notes.md  (+12 more)
integrations/_template/: README.md  plugin.config.json  support-pack.json
integrations/claude-code/: README.md  install.sh  support-pack.json
integrations/codex/: README.md  plugin.config.json
native/unictl_native/: Cargo.toml
native/unictl_native/src/: lib.rs  protocol.rs  server_unix.rs  server_windows.rs
sandbox/: README.md
scripts/: check-error-registry.ts  check-unity-meta-guids.test.ts  check-unity-meta-guids.ts  gen-error-reference.ts  release.ts
scripts/lib/: release.ts
scripts/release/: assemble.ts
scripts/version/: drift-check.ts  fanout.ts
(+23 files in other folders)
