[package]
name = "unictl_native"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "macos")'.dependencies]
tiny_http = "0.12"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Com",
] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
